--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.WeatherApp"
         tools:targetApi="31">
         <activity
+            android:name=".MapPage"
+            android:exported="false"
+            android:label="@string/title_activity_map_page"
+            android:theme="@style/Theme.WeatherApp" />
+        <activity
+            android:name=".ListPage"
+            android:exported="false"
+            android:label="@string/title_activity_list_page"
+            android:theme="@style/Theme.WeatherApp" />
+        <activity
             android:name=".RegisterActivity"
             android:exported="false"
             android:label="@string/title_activity_register"
